fix: spacing on individual messages

--- a/src/components/Viewer/Message/styles.scss
+++ b/src/components/Viewer/Message/styles.scss
@@ -1,5 +1,5 @@
 .Message {
-  margin: 10px 0;
+  margin: 15px 0;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -21,6 +21,14 @@
     + .content p {
       padding: 5px;
       padding-left: 10px;
+
+      &:nth-child(1) {
+        padding-bottom: 0;
+      }
+
+      &:nth-child(2) {
+        padding-top: 0;
+      }
     }
   }
 
